--- a/mysite/home/templates/base_bootstrap.html
+++ b/mysite/home/templates/base_bootstrap.html
@@ -4,8 +4,10 @@
 <!-- Edit dj4e-samples/settings.py and add APP_NAME = 'DJ4E Samples' or similar -->
 <title>{% block title %}{{ settings.APP_NAME }}{% endblock %}</title>
 
+<!-- Replace this value (42-42) with the one provided by the autograder -->
 <meta name="dj4e" content="6a54d83b19fe17ddc21dcbe9cb39d91a">
-<meta name="dj4e-code" content="42172073343210">
+
+<meta name="dj4e-code" content="42172125071274">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
