--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,14 +1,12 @@
-<ul>
-<li><p><a href="/polls">A Polls Application</a></p></li>
 
-<li><p><a href="/hello">Test the session</a></p></li>
 
-<li><a href="/autos">Autos CRUD</a></li>
-</ul>
+{% extends "base_bootstrap.html" %}
+{% block content %}
+    <h1>Welcome to {{ settings.APP_NAME }}</h1>
+    <p>
+    Hello world.
+    </p>
+{% endblock content %}
 
-<ul>
-    <li><a href="/autos">Autos CRUD</a>
-    <li><a href="/cats">Cats CRUD</a>
-<ul>
-
-<p>6a54d83b </p>
+</body>
+</html>
